# QT_Lessons

./: CMakeLists.txt  README.md  install.sh
QWebViewExample/: QWebViewExample.pro  QWebViewExample.pro.user.ca60369  mainwindow.cpp  mainwindow.h  mainwindow.ui
build-QWebViewExample-Desktop-Debug/: Makefile  QWebViewExample  moc_mainwindow.cpp  ui_mainwindow.h
lessons/10_lesson/: 10_lesson.pro  machineinfo.cpp  machineinfo.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsinfo.cpp  settingsinfo.h  settingsinfo.ui
lessons/10_lesson_multywindows/: machineinfo.h
lessons/11_lesson_listwidget/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
lessons/12_lesson_tablewidget/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lessons/13_lesson_comboBox/: mainwindow.cpp  mainwindow.ui
lessons/14_lesson_tablewidget/: form.ui  main.cpp  mainwindow.cpp  mainwindow.ui
lessons/15_lesson_progressBar/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lessons/16_lesson_radiobutton/: mainwindow.cpp  mainwindow.ui
lessons/17_lesson_input/: mainwindow.cpp  mainwindow.ui
lessons/18_lesson_graphs/: main.cpp  mainwindow.cpp  mainwindow.ui
lessons/19_lesson_camera/: 19_lesson_camera.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
lessons/1_lesson/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
lessons/20_camera/: mainwindow.cpp
lessons/2_lesson/: mainwindow.cpp  mainwindow.h  mainwindow.ui  secondwindow.ui
lessons/3_lesson/: mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
lessons/4_lesson/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lessons/5_lesson/: 5_lesson.pro.user.84dcbe9  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
lessons/6_lesson/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lessons/7_lesson/: 7_lesson.pro.user.84dcbe9  7_lesson.pro.user.ca60369  mainwindow.cpp
lessons/8_lesson/: 8_lesson.pro  mainwindow.cpp  mainwindow.ui
lessons/9_lesson/: mainwindow.cpp  mainwindow.ui
lessons/affine/: main.cpp  xform.h
lessons/analogclock/: analogclock
lessons/build-10_lesson-Desktop-Debug/: 10_lesson  Makefile  moc_machineinfo.cpp  moc_mainwindow.cpp  moc_settingsinfo.cpp  ui_machineinfo.h  ui_mainwindow.h  ui_settingsinfo.h
lessons/build-11_lesson-Desktop-Debug/: 11_lesson  11_lesson.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
lessons/build-12_lesson-Desktop-Debug/: 12_lesson  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
lessons/build-13_lesson-Desktop-Debug/: 13_lesson  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
lessons/build-14_lesson-Desktop-Debug/: 14_lesson  Makefile  moc_form.cpp  moc_mainwindow.cpp  ui_form.h  ui_mainwindow.h
lessons/build-15_lesson-Desktop-Debug/: 15_lesson  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
lessons/build-16_lesson_radiobutton-Desktop-Debug/: 16_lesson_radiobutton  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
lessons/build-17_lesson_input-Desktop-Debug/: 17_lesson_input  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
lessons/build-18_lesson_graphs-Desktop-Debug/: Makefile  moc_mainwindow.cpp  moc_qcustomplot.cpp  ui_mainwindow.h
lessons/build-19_lesson_camera-Desktop-Debug/: 19_lesson_camera  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
lessons/build-1_lesson-Desktop-Debug/: 1_lesson  1_lesson.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
lessons/build-20_camera-Desktop-Debug/: 20_camera  Makefile  moc_mainwindow.cpp
lessons/build-2_lesson-Desktop-Debug/: 2_lesson  2_lesson.cbp  CMakeCache.txt  Makefile  cmake_install.cmake  moc_mainwindow.cpp  moc_secondwindow.cpp  ui_mainwindow.h  ui_secondwindow.h
lessons/build-3_lesson-Desktop-Debug/: 3_lesson  Makefile  moc_mainwindow.cpp  qrc_resources.cpp  ui_mainwindow.h
lessons/build-4_lesson-Desktop-Debug/: 4_lesson  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
qt-designer/: readme.md
(+56 files in other folders)
